# Sedentary_Tracker_Behaviour

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DOCUMENTATION.md  Dockerfile  ML_ANALYTICS_SUMMARY.md  README.md  docker-compose.yml  start_replay.sh
.devcontainer/: devcontainer.json  setup-demo.sh  setup.sh
.sqlx/: query-2b3aa64bc2d6c8de101c9021e69a9c6102431c6a4bce9317373c952c9d7380cc.json  query-76c64121ea78efffff2a2a061c34f400a9bc184ecbec0835055b7a12c7dd4393.json  query-873a9069c98fb902a762f18f656029aed54b992392310e7ebe4b770dd6fcaae1.json  query-8c660b5b8bfe9a1612bcd65c6871219c99924607cf9d26a6fdc7347a80220c16.json  query-c4cfeed090b69ceb6f1d1414115985694c974729bacf41d94f1c6bbdf5a00e5e.json  query-c6df93e92b9ea3d4de431c00fcea14df9e24bd1dbe7f87a1a12497866c422881.json  query-c893ca7bfe6caed4d3e081b42aaf94a47158ee96813f9088402ea915b4f03997.json  query-d5ebcf76e327f04b344fae4a0e86bffc21972a3a417a4f8078f3421feac4cc51.json
Project_Documentation/: INCO_Documentation.md  task_distribution.html
db/: Cargo.toml
frontend/: app.js  index.html  login.css  login.html  signup.css  signup.html  styles.css
logic/: Cargo.toml
migrations/: 20260114120000_create_users_table.sql  20260122000000_create_activity_summary.sql  20260122100000_create_sensor_data.sql
ml_classification/: Dockerfile  README.md  api.py  enhanced_analytics.py  model_classification.py  (+1 more)
server/: Cargo.toml  Dockerfile
server/src/: auth.rs  db_worker.rs  fallback.rs  fhir_analytics.rs  login.rs  main.rs  models.rs  models_tests.rs  replay.rs  serial.rs  signup.rs  sse.rs  websocket.rs
(+15 files in other folders)
