[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net"] }
tokio-stream = "0.1"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
redis = { version = "0.24", features = ["tokio-comp"] }
argon2 = "0.5"
rand = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
jsonwebtoken = "9.2"
async-stream = "0.3"
futures = "0.3"


sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
db = { path = "../db" }


tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
serialport = "4.2"
chrono = "0.4"
